html and css files added

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
             <img src="./assets/player2/player2-static.png" alt="player 2 image">
         </div>
     </div>
+    <script src="./src/index.js"></script>
 </body>
 </html>
