--- a/instructions.html
+++ b/instructions.html
@@ -11,12 +11,12 @@
     <div class="main-container">
         <h2 id="title">STORY</h2>
         <p id="main-text">
-            There are two mafia groups - The Obsidian Brotherhood and The Midnight Ravens. These two groups are fighting to decide who will rule the underworld. Both groups send their best representative, who then engage in a thrilling duel to till one of the fighter reaches death. The mafia group of the survivor gains a point. The representative from the Obsidian Brotherhood is Salvatore Romano. The representative from the Midnight Ravens is Dominic Valentino.
+            There are two mafia groups - The Obsidian Brotherhood and The Midnight Ravens. These two groups are fighting to decide who will rule the underworld. Both groups send their best representative, who then engage in a thrilling duel to till one of the fighter reaches death. The mafia group of the survivor gains a point. The representative from the Obsidian Brotherhood is Player 1 in the game and the representative from the Midnight Ravens is Player 2 in the game.
         </p>
         <p id="click-text">Click Anywhere to Continue</p>
     </div>
     <div id="skip-button">
-        <p id="skip">Skip to Game  >></p>
+        <p id="skip">Skip to Game&nbsp;&nbsp;&nbsp;>></p>
     </div>
 
     <script src="./src/instructions.js"></script>
