--- a/result.html
+++ b/result.html
@@ -11,19 +11,24 @@
     <div class="main-container">
         <h1>FATAL DUEL</h1>
         <div id="container" class="flex">
-            <h3>Score Team 1 :</h3>
+            <h3><span id="player1-name">Team 1</span> : <span id="p1score">0</span></h3>
             <h2><span id="game-over-message">Team 1 Wins!</span></h2>
-            <h3>Score Team 2 :</h3>
+            <h3><span id="player2-name">Team 1</span> : <span id="p2score">0</span></h3>
         </div>
         <div id="container" class="flex">
             <img src="./assets/player1/player1-static.png" alt="player 1 image">
             <div class="button-container">
-                <button id="play-again-button">
+                <button id="play-again-button" class="button">
                     PLAY AGAIN
+                </button>
+                <button id="new-game-button" class="button">
+                    NEW GAME
                 </button>
             </div>
             <img src="./assets/player2/player2-static.png" alt="player 2 image">
         </div>
     </div>
+
+    <script src="./src/result.js"></script>
 </body>
 </html>
