--- a/instructions.html
+++ b/instructions.html
@@ -16,7 +16,7 @@
         <p id="click-text">Click Anywhere to Continue</p>
     </div>
     <div id="skip-button">
-        <p id="skip">Skip to Game&nbsp;&nbsp;&nbsp;>></p>
+        <p id="skip">Skip to the Game&nbsp;&nbsp;&nbsp;>></p>
     </div>
 
     <script src="./src/instructions.js"></script>
